src/parser/LenguajeMomoXDParser.py
# Generated from grammar/LenguajeMomoXD.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LenguajeMomoXDParser ( Parser ):

    grammarFileName = "LenguajeMomoXD.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'ascendente'", "'descendente'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'calcular'", "'como'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'promedio'", "'media'", 
                     "'mediana'", "<INVALID>", "'maximo'", "<INVALID>", 
                     "'minimo'", "<INVALID>", "'conteo'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'si'", "'entonces'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'sino'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'mientras'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'para'", "'desde'", "'hasta'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'funcion'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'regresar'", "'retornar'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'separador'", 
                     "'en'", "'titulo'", "<INVALID>", "<INVALID>", "'guardar'", 
                     "','", "':'", "'('", "')'", "'['", "']'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'^'", "'>='", "'<='", "'=='", 
                     "'!='", "'>'", "'<'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "XD", "PIPE", "WHEN_HACES", 
                      "PASA_EL_PACK", "PASA_EL_ZELDA", "ROBAR_MOMO", "SUBIR_AL_GRUPO", 
                      "GUARDAR_MOMO", "ESCOJO_A", "ESCOJO_A_LOS_PAPUS", 
                      "SELECCIONAR_MOMOS", "BUT_TE_ENTERAS_QUE", "BUT_ELLA_NO_TE_AMA", 
                      "NO_LO_SE_RICK", "FILTRAR_GRASOSOS", "ORDENAR_A_LOS_PAPUS", 
                      "ORDENAR_MOMOS", "DE_ARRIBA_A_ABAJO", "DE_ABAJO_A_ARRIBA", 
                      "ASCENDENTE", "DESCENDENTE", "EL_FUTURO_ES_HOY_OISTE_VIEJO", 
                      "METANLE_SABOR_A", "CREAR_MOMO", "JUNTAR_A_LA_GRASA_POR", 
                      "AGRUPAR_A_LOS_PAPUS_POR", "SACAR_CUENTAS", "RESUMIR_MOMOS", 
                      "CALCULAR", "COMO", "SUMA", "MULTIPLICACION", "RESTA", 
                      "DIVISION", "PROMEDIO", "MEDIA", "MEDIANA", "EL_MAS_PRO", 
                      "MAXIMO", "EL_MAS_MANCO", "MINIMO", "CONTAR_PAPUS", 
                      "CONTEO", "DESVIACION_PRO", "GRAFICAR_MOMOS_EN_BARRAS", 
                      "GRAFICAR_MOMOS_EN_LINEAS", "GRAFICAR_MOMOS_EN_HISTOGRAMA", 
                      "GRAFICAR_MOMOS_EN_DISPERSION", "GRAFICAR_MOMOS_EN_CAJAS", 
                      "SI_EL_PAPU", "SI_PASA_ESTO", "SI", "ENTONCES", "HAZ_ESTO", 
                      "SINO_CALLESE_SENORA", "PERO_SI_NO", "SINO", "FIN_DEL_SI", 
                      "MIENTRAS_EL_PAPU", "MIENTRAS_TANTO", "MIENTRAS", 
                      "FIN_DEL_BUCLE", "PARA_CADA_PAPU", "POR_CADA_UNO", 
                      "PARA", "DESDE", "HASTA", "MOMO_FUNCION", "FUNCION_PAPU", 
                      "RUTINA_MOMO", "FUNCION", "FIN_DE_LA_FUNCION", "SUELTA_EL_MOMO", 
                      "RETORNA_EL_PACK", "REGRESAR", "RETORNAR", "FIN_DEL_MOMO", 
                      "Y_ADEMAS", "O_BIEN", "NO_ES_CIERTO", "AND_OP", "OR_OP", 
                      "NOT_OP", "SEPARADOR", "EN", "TITULO", "EJE_X", "EJE_Y", 
                      "GUARDAR", "COMA", "DOS_PUNTOS", "PAREN_IZQ", "PAREN_DER", 
                      "CORCH_IZQ", "CORCH_DER", "MAS", "MENOS", "MULT", 
                      "DIV", "MOD", "POT", "MAYOR_IGUAL", "MENOR_IGUAL", 
                      "IGUAL_IGUAL", "DIFERENTE", "MAYOR", "MENOR", "ID", 
                      "NUMERO", "CADENA", "COMENTARIO", "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_asignacion = 2
    RULE_expresionPipeline = 3
    RULE_expresionBase = 4
    RULE_instruccionCarga = 5
    RULE_instruccionImprimir = 6
    RULE_instruccionGuardado = 7
    RULE_operacionPipeline = 8
    RULE_operacionSeleccionar = 9
    RULE_operacionFiltrar = 10
    RULE_operacionOrdenar = 11
    RULE_operacionCrearColumna = 12
    RULE_operacionAgrupar = 13
    RULE_operacionResumir = 14
    RULE_listaAgregaciones = 15
    RULE_agregacion = 16
    RULE_funcionAgg = 17
    RULE_instruccionVisualizacion = 18
    RULE_tipoGrafico = 19
    RULE_instruccionSi = 20
    RULE_instruccionMientras = 21
    RULE_instruccionPara = 22
    RULE_definicionFuncion = 23
    RULE_listaParametros = 24
    RULE_parametro = 25
    RULE_instruccionRetorno = 26
    RULE_bloque = 27
    RULE_expresionBooleana = 28
    RULE_expresionLogicaOr = 29
    RULE_expresionLogicaAnd = 30
    RULE_expresionLogicaNot = 31
    RULE_expresionRelacional = 32
    RULE_opRelacional = 33
    RULE_expresionAritmetica = 34
    RULE_termino = 35
    RULE_factor = 36
    RULE_llamadaFuncion = 37
    RULE_funcionNombre = 38
    RULE_listaArgumentos = 39
    RULE_listaIDs = 40
    RULE_idOAgg = 41

    ruleNames =  [ "programa", "sentencia", "asignacion", "expresionPipeline", 
                   "expresionBase", "instruccionCarga", "instruccionImprimir", 
                   "instruccionGuardado", "operacionPipeline", "operacionSeleccionar", 
                   "operacionFiltrar", "operacionOrdenar", "operacionCrearColumna", 
                   "operacionAgrupar", "operacionResumir", "listaAgregaciones", 
                   "agregacion", "funcionAgg", "instruccionVisualizacion", 
                   "tipoGrafico", "instruccionSi", "instruccionMientras", 
                   "instruccionPara", "definicionFuncion", "listaParametros", 
                   "parametro", "instruccionRetorno", "bloque", "expresionBooleana", 
                   "expresionLogicaOr", "expresionLogicaAnd", "expresionLogicaNot", 
                   "expresionRelacional", "opRelacional", "expresionAritmetica", 
                   "termino", "factor", "llamadaFuncion", "funcionNombre", 
                   "listaArgumentos", "listaIDs", "idOAgg" ]

    EOF = Token.EOF
    T__0=1
    XD=2
    PIPE=3
    WHEN_HACES=4
    PASA_EL_PACK=5
    PASA_EL_ZELDA=6
    ROBAR_MOMO=7
    SUBIR_AL_GRUPO=8
    GUARDAR_MOMO=9
    ESCOJO_A=10
    ESCOJO_A_LOS_PAPUS=11
    SELECCIONAR_MOMOS=12
    BUT_TE_ENTERAS_QUE=13
    BUT_ELLA_NO_TE_AMA=14
    NO_LO_SE_RICK=15
    FILTRAR_GRASOSOS=16
    ORDENAR_A_LOS_PAPUS=17
    ORDENAR_MOMOS=18
    DE_ARRIBA_A_ABAJO=19
    DE_ABAJO_A_ARRIBA=20
    ASCENDENTE=21
    DESCENDENTE=22
    EL_FUTURO_ES_HOY_OISTE_VIEJO=23
    METANLE_SABOR_A=24
    CREAR_MOMO=25
    JUNTAR_A_LA_GRASA_POR=26
    AGRUPAR_A_LOS_PAPUS_POR=27
    SACAR_CUENTAS=28
    RESUMIR_MOMOS=29
    CALCULAR=30
    COMO=31
    SUMA=32
    MULTIPLICACION=33
    RESTA=34
    DIVISION=35
    PROMEDIO=36
    MEDIA=37
    MEDIANA=38
    EL_MAS_PRO=39
    MAXIMO=40
    EL_MAS_MANCO=41
    MINIMO=42
    CONTAR_PAPUS=43
    CONTEO=44
    DESVIACION_PRO=45
    GRAFICAR_MOMOS_EN_BARRAS=46
    GRAFICAR_MOMOS_EN_LINEAS=47
    GRAFICAR_MOMOS_EN_HISTOGRAMA=48
    GRAFICAR_MOMOS_EN_DISPERSION=49
    GRAFICAR_MOMOS_EN_CAJAS=50
    SI_EL_PAPU=51
    SI_PASA_ESTO=52
    SI=53
    ENTONCES=54
    HAZ_ESTO=55
    SINO_CALLESE_SENORA=56
    PERO_SI_NO=57
    SINO=58
    FIN_DEL_SI=59
    MIENTRAS_EL_PAPU=60
    MIENTRAS_TANTO=61
    MIENTRAS=62
    FIN_DEL_BUCLE=63
    PARA_CADA_PAPU=64
    POR_CADA_UNO=65
    PARA=66
    DESDE=67
    HASTA=68
    MOMO_FUNCION=69
    FUNCION_PAPU=70
    RUTINA_MOMO=71
    FUNCION=72
    FIN_DE_LA_FUNCION=73
    SUELTA_EL_MOMO=74
    RETORNA_EL_PACK=75
    REGRESAR=76
    RETORNAR=77
    FIN_DEL_MOMO=78
    Y_ADEMAS=79
    O_BIEN=80
    NO_ES_CIERTO=81
    AND_OP=82
    OR_OP=83
    NOT_OP=84
    SEPARADOR=85
    EN=86
    TITULO=87
    EJE_X=88
    EJE_Y=89
    GUARDAR=90
    COMA=91
    DOS_PUNTOS=92
    PAREN_IZQ=93
    PAREN_DER=94
    CORCH_IZQ=95
    CORCH_DER=96
    MAS=97
    MENOS=98
    MULT=99
    DIV=100
    MOD=101
    POT=102
    MAYOR_IGUAL=103
    MENOR_IGUAL=104
    IGUAL_IGUAL=105
    DIFERENTE=106
    MAYOR=107
    MENOR=108
    ID=109
    NUMERO=110
    CADENA=111
    COMENTARIO=112
    WS=113

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LenguajeMomoXDParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LenguajeMomoXDParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(LenguajeMomoXDParser.SentenciaContext,i)


        def getRuleIndex(self):
            return LenguajeMomoXDParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = LenguajeMomoXDParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8088464926462444304) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 246291141508583) != 0):
                self.state = 84
                self.sentencia()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(LenguajeMomoXDParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.AsignacionContext,0)


        def XD(self):
            return self.getToken(LenguajeMomoXDParser.XD, 0)

        def instruccionImprimir(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.InstruccionImprimirContext,0)


        def instruccionGuardado(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.InstruccionGuardadoContext,0)


        def instruccionVisualizacion(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.InstruccionVisualizacionContext,0)


        def instruccionSi(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.InstruccionSiContext,0)


        def instruccionMientras(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.InstruccionMientrasContext,0)


        def instruccionPara(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.InstruccionParaContext,0)


        def definicionFuncion(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.DefinicionFuncionContext,0)


        def instruccionRetorno(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.InstruccionRetornoContext,0)


        def llamadaFuncion(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.LlamadaFuncionContext,0)


        def expresionAritmetica(self):
            return self.getTypedRuleContext(LenguajeMomoXDParser.ExpresionAritmeticaContext,0)


        def getRuleIndex(self):
            return LenguajeMomoXDParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = LenguajeMomoXDParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.asignacion()
                self.state = 93
                self.match(LenguajeMomoXDParser.XD)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.instruccionImprimir()
                self.state = 96
                self.match(LenguajeMomoXDParser.XD)
                pass
